--- a/ressources.qrc
+++ b/ressources.qrc
@@ -2,4 +2,7 @@
     <qresource prefix="/images">
         <file>icon.jpg</file>
     </qresource>
+    <qresource prefix="/config">
+        <file>global.xml</file>
+    </qresource>
 </RCC>
