--- a/truncation.ui
+++ b/truncation.ui
@@ -48,8 +48,59 @@
     <bool>true</bool>
    </property>
   </widget>
+  <widget class="QSpinBox" name="spinBox">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>90</y>
+     <width>61</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="suffix">
+    <string> bits</string>
+   </property>
+   <property name="prefix">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="spinBox_2">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>90</y>
+     <width>61</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="suffix">
+    <string> bits</string>
+   </property>
+   <property name="prefix">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="spinBox_3">
+   <property name="geometry">
+    <rect>
+     <x>610</x>
+     <y>90</y>
+     <width>61</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="suffix">
+    <string> bits</string>
+   </property>
+   <property name="prefix">
+    <string/>
+   </property>
+  </widget>
   <zorder>label</zorder>
   <zorder>buttonBox</zorder>
+  <zorder>spinBox</zorder>
+  <zorder>spinBox_2</zorder>
+  <zorder>spinBox_3</zorder>
  </widget>
  <resources/>
  <connections>
